--- a/WebRTC-Game-SocketIO/package.json
+++ b/WebRTC-Game-SocketIO/package.json
@@ -4,16 +4,16 @@
   "description": "multiplayer game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "andrea dinetti, marika sasso",
   "license": "ISC",
   "dependencies": {
-    "@geckos.io/client": "^3.0.0",
-    "@geckos.io/server": "^3.0.0",
-    "dompurify": "^3.0.11",
     "express": "4.18.2",
     "socket.io": "4.6.1",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
